# cuda-na-kiju

./: .gitignore
include/: cu-utils.h  perf-measure.h
linux/: CMakeLists.txt
src/: add.cu  cu-utils.h  cuda-test.cpp  matrixAdd.cu  matrixMult.cu  misc.cu  perf-measure.h  shuffle.cu  sorting.cu
win/: cuda-test.sln  cuda-test.vcxproj  cuda-test.vcxproj.filters  random.cu
